feat: 新增笔记同步功能，确保local-first